fixed shop gap

--- a/site/shop/shop-styles.css
+++ b/site/shop/shop-styles.css
@@ -55,7 +55,7 @@ body {
     flex-direction: column;
     align-items: end;
     flex-grow: 1;
-    gap: 20px;
+    gap: 10px;
     padding: 10px 20px 0px 10px;
     width: 950px;
 }
